--- a/src/main/resources/templates/Frontend/Main/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/Main/Checkout.mustache
@@ -309,7 +309,7 @@
                                             <a href="http://localhost:8888/Index/Checkout/Remove/{{cartItemId}}"
                                                type="button"
                                                class="card-link-secondary small text-uppercase mr-3"><i
-                                                    class="fas fa-trash-alt mr-1"></i></a>
+                                                    class="fas fa-trash-alt mr-1" style="color: #007bff !important;"></i></a>
                                         </h6>
                                     </div>
                                     <div>
@@ -391,9 +391,9 @@
                                     </div>
                                 </div>
 
-                                <div class="mb-3">
+                                <div class="mb-3" hidden>
                                     <label for="username">Username</label>
-                                    <div class="input-group">
+                                    <div class="input-group" >
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">@</span>
                                         </div>
@@ -495,7 +495,6 @@
         </ul>
     </div>
 </footer>
-</body>
 <!-- Javascript -->
 <script src="/js/Main/jquery-3.3.1.min.js"></script>
 <script src="/js/Main/jquery-migrate-3.0.0.min.js"></script>
@@ -572,4 +571,5 @@
 </script>
 
 
+</body>
 </html>
