--- a/src/main/resources/templates/Frontend/Admin/Reviews.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Reviews.mustache
@@ -215,7 +215,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
-                        <a id="deletebtn" class="btn btn-danger">Delete Event</a>
+                        <a id="deletebtn" class="btn btn-danger">Delete Review</a>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </form>
@@ -295,7 +295,7 @@
                     <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
-                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}>
+                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}">
                         </div>
                     </div>
 
@@ -322,77 +322,6 @@
     </div>
 </div>
 
-
-<div class="modal" tabindex="-1" role="dialog" id="productsModal">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Edit Product</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateProduct" novalidate>
-                    <div class="form-group row">
-                        <label for="reviewId" class="col-4 col-form-label">Review id</label>
-                        <div class="col-8">
-                            <input id="reviewId" name="reviewId" type="text" class="form-control" readonly>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="productId" class="col-4 col-form-label">Product id</label>
-                        <div class="col-8">
-                            <input id="productId" name="productId" type="text" class="form-control" readonly>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="title" class="col-4 col-form-label">Title</label>
-                        <div class="col-8">
-                            <input id="title" name="title" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="rating" class="col-4 col-form-label">Rating</label>
-                        <div class="col-8">
-                            <input id="rating" name="rating" type="number" class="form-control" required min="1" max="5"
-                                   placeholder="max rating 5">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="createdAt" class="col-4 col-form-label">Created At</label>
-                        <div class="col-8">
-                            <input id="createdAt" name="createdAt" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="content" class="col-4 col-form-label">Content</label>
-                        <div class="col-8">
-                            <input id="content" name="content" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="userId" class="col-4 col-form-label">User id</label>
-                        <div class="col-8">
-                            <input id="userId" name="userId" type="number" class="form-control" readonly>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Save changes</button>
-                        <a id="deletebtn" class="btn btn-danger">Delete Event</a>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-</div>
-
-
-</div>
 <script>
 
 
