--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -131,7 +131,7 @@
                                             <a href="http://localhost:8888/User/Checkout/Remove/{{cartItemId}}"
                                                type="button"
                                                class="card-link-secondary small text-uppercase mr-3"><i
-                                                    class="fas fa-trash-alt mr-1"></i></a>
+                                                    class="fas fa-trash-alt mr-1" style="color: #007bff !important;"></i></a>
                                         </h6>
                                     </div>
                                     <div>
@@ -214,7 +214,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mb-3">
+                                <div class="mb-3" hidden>
                                     <label for="username">Username</label>
                                     <div class="input-group">
                                         <div class="input-group-prepend">
@@ -229,7 +229,7 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="email">Email <span class="text-muted">(Optional)</span></label>
+                                    <label for="email">Email</label>
                                     <input type="email" class="form-control" id="email" placeholder="you@example.com" value="{{userData.email}}" name="email">
                                     <div class="invalid-feedback">
                                         Please enter a valid email address for shipping updates.
@@ -396,6 +396,7 @@
 </div>
 </div>
 </div>
+</div>
 <script src="/js/Admin/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
@@ -428,6 +429,7 @@
       $("body").toggleClass("sb-sidenav-toggled");
 
     }
+
 </script>
 </body>
 </html>
