--- a/src/main/resources/templates/Frontend/User/Payment.mustache
+++ b/src/main/resources/templates/Frontend/User/Payment.mustache
@@ -132,7 +132,7 @@
                                             <a href="http://localhost:8888/Index/Payment/Remove/{{cartItemId}}"
                                                type="button"
                                                class="card-link-secondary small text-uppercase mr-3"><i
-                                                    class="fas fa-trash-alt mr-1"></i></a>
+                                                    class="fas fa-trash-alt mr-1" style="color: #007bff !important;"></i></a>
                                         </h6>
                                     </div>
                                     <div>
