--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -316,7 +316,7 @@
                 </button>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/User/updateUser" novalidate>
                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
@@ -371,7 +371,7 @@
                   <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
-                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}>
+                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}">
                         </div>
                     </div>
 
