--- a/src/main/resources/templates/Frontend/User/Payment.mustache
+++ b/src/main/resources/templates/Frontend/User/Payment.mustache
@@ -243,7 +243,7 @@
                 </button>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/User/updateUser" novalidate>
                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
