--- a/src/main/resources/templates/Frontend/User/Purchases.mustache
+++ b/src/main/resources/templates/Frontend/User/Purchases.mustache
@@ -155,7 +155,7 @@
                 </button>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/User/updateUser" novalidate>
                     <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label>
                         <div class="col-8">
@@ -215,7 +215,7 @@
                     <div class="form-group row" style="display:none;">
                         <label for="userId" class="col-4 col-form-label">username</label>
                         <div class="col-8">
-                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}>
+                            <input id="userId" name="username" type="text" class="form-control" value="{{userData.email}}">
                         </div>
                     </div>
 
@@ -234,10 +234,8 @@
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
-                    </div>
                 </form>
             </div>
-
         </div>
     </div>
 </div>
