--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -139,7 +139,7 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <table class="table table-bordered" id="dataTableOrders" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
                                     <th>OrderID</th>
@@ -282,7 +282,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="modalBody">
-                    <form method="POST" action="/Admin/updateUser" novalidate>
+                    <form method="POST" action="/User/updateUser" novalidate>
                         <div class="form-group row">
                             <label for="userId" class="col-4 col-form-label">User id</label>
                             <div class="col-8">
@@ -385,7 +385,7 @@
                     $('#dataTableReview').DataTable();
                 });
                 $(document).ready(function () {
-                    $('#dataTable').DataTable();
+                    $('#dataTableOrders').DataTable();
                 });
 
                 function clicked() {
